2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Fix a typo in the Usage string.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpconv.c, src/groups.c: Name the parameters in the
	prototypes of the static functions.
	* src/grpconv.c, src/grpunconv.c, src/logoutd.c: Fail if
	unexpected parameters are provided.
	* src/grpconv.c, src/grpunconv.c: Indicate that argc is not used
	in the no SHADOWGRP version.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chgpasswd.c, src/chpasswd.c: Removed variable ok, which is
	no more used.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: Fix the format for long integers (from %ul to %lu).

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: Mark the line and host arguments of setutmp() as
	not used in the __linux__ version.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/nscd.c: Avoid redefinition of _GNU_SOURCE.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Indentation fix.
	* configure.in, src/login.c: Do not use HAVE_PAM_FAIL_DELAY, but
	HAS_PAM_FAIL_DELAY, to avoid a redefinition with Linux PAM.

2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Added functions add_user(), remove_user(), and
	purge_members() to ease the support of gshadow.

2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/expiry.c: Use Basename for Prog.
	* src/expiry.c: Added missing OPENLOG.

2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/nscd.c: Make sure the file is not empty when configured
	without nscd support.

2008-08-27  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Remove the USE_NSCD AM_CONDITIONAL (USE_NSCD is
	not used in any Makefile.am).
	* configure.in: Make sure posix_spawn is present when configured
	with nscd support.